fixed carousel spacing

--- a/public/CSS/layouts/style.css
+++ b/public/CSS/layouts/style.css
@@ -540,6 +540,7 @@ div.footer {
           background-image:url(http://i.imgur.com/uff9Yzd.jpg);
            min-height: 100vh;
            text-align: center;
+           margin-top: -53px;
        }
 
        .features-list h2{
